--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "mammoth": "^1.4.6",
     "multer": "^1.4.1",
+    "pdf-text-extract": "^1.5.0",
     "pdf-to-text": "0.0.7",
     "pdfreader": "^0.2.5",
     "pdftohtmljs": "^0.5.2"
